@@ -44,6 +44,7 @@ private:
     KIntSpinBox *iNumFiles;
     QCheckBox *cWaitForAlbumGain;
     QCheckBox *cCreateActionsMenu;
+    QCheckBox *cWriteLogFiles;
     KComboBox *cReplayGainGrouping;
 
     Config *config;
