@@ -1,5 +1,6 @@
 1.2.90 (1.3.0 rc1):
 -Add: Option to apply album gain to converted files
+-Change: By default log files won't be written to the hard drive anymore, it can be activated in the config dialog though
 
 1.2.1:
 -Add: French translation
